[package]
name = "rust-resampler"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
kdtree = "0.7.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
polars = { version = "0.51.0", features = ["lazy", "csv", "dtype-full", "ndarray"] }
polars-utils = "0.51.0"
rand = "0.9.2"
rayon = "1.11.0"
